# CppProjectTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  模板使用指南.md
.github/workflows/: cmake.yml
cmake/: README.md
docs/: README.md
include/: README.md  calculator.h
src/: CMakeLists.txt  README.md  calculator.cpp  main.cpp
tests/: CMakeLists.txt  README.md  calculator_test.cpp  test_main.cpp
